# MachineEmulator

./: CMakeLists.txt  README.md  config.c  config.h  config.ini  generator.c  generator.h  logger.c  logger.h  main.c  time_utils.c  time_utils.h  ui_helper.c  ui_helper.h  worker.c  worker.h  Отчет MachineEmulator.docx
source/: source_error.txt  source_operate.txt
